[metadata]
name = mlfinlab
version = 0.1.2.7 
url = https://github.com/Moccazio/mlfinlab-updated
license = Apache License 2.0
author = Hudson & Thames Quantitative Research
author_email = hello@hudsonthames.org
description = Python library for Machine Learning in Finance
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
install_requires =
    numpy>=1.20.0,<2.0.0
    pandas>=1.2.0,<3.0.0
    scipy>=1.6.0,<2.0.0
    statsmodels>=0.12.0,<1.0.0
    scikit-learn>=0.24.0,<2.0.0
    matplotlib>=3.3.0,<4.0.0
    seaborn>=0.11.0,<0.14.0
    joblib>=1.0.0,<2.0.0
    tqdm>=4.50.0,<5.0.0

[options.packages.find]
exclude =
    tests*
    docs*
    examples*
    notebooks*
